--- a/NewEraFitness/res/values/color.xml
+++ b/NewEraFitness/res/values/color.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <color name="divider_color">#FFCCCCCC</color>  
+  <color name="white">#FFFFFF</color>
+  <color name="black">#000000</color>
+  <color name="tab_title_normal_color">#262726</color>
+  <color name="tab_title_pressed_color">#16982b</color>
+  <color name="tab_middle_line_color">#5c882c</color>
 </resources>
