--- a/NewEraFitness/res/layout/nearby_layout.xml
+++ b/NewEraFitness/res/layout/nearby_layout.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:padding="10dp"
-            android:text="这是设置界面"
+            android:text="这是附近商家界面"
             android:textSize="20sp" />
     </LinearLayout>
 
