--- a/im/res/layout/activity_apply_event.xml
+++ b/im/res/layout/activity_apply_event.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+  <LinearLayout 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F3F3F3"
@@ -206,4 +209,5 @@
         android:textSize="20sp" />
    
 
-</LinearLayout>
+  </LinearLayout>
+</ScrollView>
