--- a/im/res/layout/activity_splash.xml
+++ b/im/res/layout/activity_splash.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="v1.0"
+        android:text=""
         android:textColor="#ffffff"
         android:textSize="20sp"
         android:textStyle="bold" />
