--- a/im/res/layout/view_event_list_item.xml
+++ b/im/res/layout/view_event_list_item.xml
@@ -33,6 +33,8 @@
             android:id="@+id/event_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:textSize="12sp" />
     </LinearLayout>
     <LinearLayout
