朋友圈及活动若干问题修改
1.朋友圈“点赞”及“留言”按钮样式更换
2.朋友圈新建按钮移至右上角，原按钮隐藏
3.活动接口及详情界面调整
4.活动报名电话号码增加长度校验

--- a/im/res/layout/activity_apply_event.xml
+++ b/im/res/layout/activity_apply_event.xml
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content" 
         android:src="@drawable/ico_pos" />
             <TextView
-            android:id="@+id/event_content_item"
+            android:id="@+id/event_address"
             android:layout_marginLeft="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -125,7 +125,7 @@
         android:layout_height="wrap_content" 
         android:src="@drawable/ico_time" />
             <TextView
-            android:id="@+id/event_content_item"
+            android:id="@+id/event_time"
             android:layout_marginLeft="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -154,7 +154,7 @@
         android:layout_height="wrap_content" 
         android:src="@drawable/ico_money" />
             <TextView
-            android:id="@+id/event_content_item"
+            android:id="@+id/event_money"
             android:layout_marginLeft="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
