--- a/im/res/values/color.xml
+++ b/im/res/values/color.xml
@@ -14,4 +14,5 @@
     <color name="no12">#FF212121</color>
     <color name="no13">#FFEEFF41</color>
     <color name="no14">#FFE6EF2E</color>
+    <color name="no15">#FFC74E4E</color>
 </resources>
