--- a/im/res/layout/fragment_event.xml
+++ b/im/res/layout/fragment_event.xml
@@ -8,7 +8,9 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:divider="#00000000"
+        android:dividerHeight="18dp">
     </ListView>
 
 </RelativeLayout>
