--- a/im/res/layout/activity_main.xml
+++ b/im/res/layout/activity_main.xml
@@ -17,11 +17,11 @@
 	    android:layout_below="@id/toolbar"
 	    android:background="@color/no1" />
     
-    <android.support.v4.view.ViewPager
+    <com.novagee.aidong.view.CustomViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/sliding_tabs" >
-    </android.support.v4.view.ViewPager>
+    </com.novagee.aidong.view.CustomViewPager>
 
 </RelativeLayout>
