--- a/im/res/layout/view_user_list_item_new.xml
+++ b/im/res/layout/view_user_list_item_new.xml
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="聊天"
+            android:text="@string/tab_title_chat"
             android:textColor="@color/no1"
             android:textSize="13sp" />
      </RelativeLayout>
